--- a/css/common.css
+++ b/css/common.css
@@ -10,9 +10,9 @@
 .gnb {
     overflow: hidden;
     margin: 0 auto;
-    padding-top: 10px;
+    padding-top: 16px;
     position: relative;
-    background-color: white;
+    background-color: rgb(255, 93, 93);
 }
 
 .gnb .logo  {
@@ -25,30 +25,43 @@
 }
 
 .gnb .logo a h2 {
-    color: rgb(9, 78, 0);
+    color: rgb(255, 255, 255);
     font-size: 25px;
     font-weight: bold;
+    padding-left: 15px;
+    padding-bottom: 20px;
 }
 
 .gnb ul {
     overflow: hidden;
     float: right;
-    /* padding-top: 10px;
-    padding-left: 10px; */
+    /* nav바 메뉴영역 */
     width: calc(100% - 217px);
+    padding-right: 15px;
 }
 
 .gnb ul > li {
     float: right;
     padding: 8px 15px;
     overflow: hidden;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .gnb ul > li a {
-    color: rgb(0, 0, 0);
 /* 하이퍼링크 데코레이션 밑줄 안보이게 */
     text-decoration: none;
+    color: white;
+}
+
+#container{
+    margin-top: 8px;
+    width: 100%;
+    height: 150px;
+    background-color: rgb(255, 243, 188);
+    position: static;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 100%
 }
 
 #container h2 {
@@ -56,4 +69,20 @@
     padding-top:40px;
     font-size:50px;
     color: rgb(255, 255, 255);
-  }
+}
+
+
+ /* 스마트폰 */
+@media screen and (min-width:320px) {
+
+  } 
+
+/* 태블릿 */
+  @media screen and (min-width:768px) {
+
+  } 
+
+  /* pc */
+  @media screen and (min-width:1024px) {
+
+  } 
