--- a/css/weather.css
+++ b/css/weather.css
@@ -1,96 +1,78 @@
-@charset "utf-8";
-
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Alata', sans-serif;
+* {
+	margin: 0;
+	font-weight: normal;
 }
 
-/* 메뉴바 */
-.gnb {
-  padding-top: 0px;
-  margin-top: 0px;
+p {
+	margin-bottom: 10px;
 }
 
-#container{
-  width: 100%;
-  height: 180px;
-  background-color: rgb(211, 211, 211);
-  position: static;
-  /* display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 100% */
+body {
+	color: #333;
+	font-size: 100%;
+	font-family: sans-serif;
 }
 
-#container h2 {
-  text-align:center;
-  padding-top:50px;
-  font-size:50px;
-  color: rgb(255, 255, 255);
+#weather_info {
+	position: relative;
+	width: 100%;
+	border: 1px solid #999;
+	box-sizing: border-box;
+	padding: 10px;
+	background: #eee;
+	background:
+		url("https://lintvwkbn.files.wordpress.com/2016/03/youngstown-ohio-weather-forecast-cloudy-7.jpg")
+		no-repeat;
+	background-size: cover;
+	color: white;
 }
 
-/* #container p {
-  text-align:center;
-  font-size:20px;
-  color: rgb(255, 255, 255);
-} */
-
-
-/* 날씨박스 */
-.weatherBox {
-  /* position: absolute; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 10px;
-  height: 160px;
-  width: 200px;
-  border-radius: 10px;
-  background-color: rgba(255, 134, 134, 0.233);
+h1 {
+	background: #666;
+	padding: 10px;
+	font-size: 1.8em;
+	text-align: center;
+	opacity: 0.8;
 }
 
-.subWeatherBox {
-  /* margin-top: -10px; */
-  display: flex;
-  align-items: center;
+section {
+	overflow: hidden;
+	color: #666;
+	text-shadow: 1px 1px 1px #999;
+	padding: 10px 20px;
 }
 
-  .weatherIcon {
-  width: 90px;
-  height: 90px;
+section>.w_id {
+	text-align: left;
+	padding-left: 20px;
 }
 
-.temperature {
-  color: rgb(0, 0, 0);
-  font-size: 28px;
-  font-weight: bold;
-
+section>figure, section>.temp {
+	float: left;
+	width: 33.3%;
 }
 
-.weather {
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-  margin-top: -10px;
-  font-weight: bold;
+section>figure>img {
+	width: 80px;
 }
 
-.location {
-  color: rgb(0, 0, 0);
-  font-size: 25px;
-  font-weight: bold;
-  margin-top: 5px;
+section>.temp {
+	font-size: 3.4em;
 }
 
-
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+aside {
+	overflow: hidden;
 }
 
+aside>p {
+	font-size: 1.8em;
+	text-align: right;
+}
 
+/* 로딩이미지 */
+#weather_info .load_img {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	display: none;
+}
