--- a/css/common.css
+++ b/css/common.css
@@ -12,6 +12,7 @@
     background-color: rgb(255, 255, 255);
     width: 60px;
     height: 100px;
+    /* display: none; */
 }
 
 .menu .trigger a {
@@ -121,7 +122,7 @@
     }
     .gnb ul > li a  {
         font-size: 12px;
-        color: black;
+        /* color: black; */
     }
     .gnb .logo h2{
         font-size: 10px;
@@ -129,8 +130,8 @@
     .gnb ul > li {
         display: none;
     }
-    .menu .trigger a { 
-        display: block;
+    .menu .trigger a{ 
+        display: show;
         float: right;
     }
 }
