--- a/css/map.css
+++ b/css/map.css
@@ -13,6 +13,10 @@
     margin: auto;
     width: auto;
   }
+  .map_wrap #menu_wrap {
+    height: 400px;
+    width: 200px;
+  }
 }
 
 /* 태블릿 */
@@ -22,3 +26,24 @@
     margin: auto;
     width: auto;
   }
+}
+
+
+/* .option button{
+  font-size: 18px;
+  width:180px;
+  height:40px;
+  color:rgb(139, 139, 139);
+  border: 0px;
+  border-radius: 4px;
+  background: rgb(254, 255, 222);
+}
+
+.option input{
+  background: rgb(255, 255, 255);
+  border: 0px;
+  border-radius: 4px;
+  width:150px;
+  height:30px;
+} */
+/
