--- a/css/weather.css
+++ b/css/weather.css
@@ -81,14 +81,9 @@ padding-right: 50px;
   height: 100%;
 }
 
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+ /* 푸터 박스 */
+ .footer {
+  margin-top: 50px;
 }
 
 
