--- a/css/common.css
+++ b/css/common.css
@@ -86,25 +86,24 @@
 }
 
 #container{
-    margin-top: 8px;
     width: 100%;
-    height: 150px;
+    height: 180px;
     background-color: rgb(255, 243, 188);
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 100%
+    grid-template-columns: 100%;
 }
 
 #container h2 {
     text-align:center;
     padding-top:40px;
     font-size:50px;
+    font-weight: bold;
     color: rgb(255, 255, 255);
 }
 
 
  /* 푸터 박스 */
-
  .footer {
     background-color: rgb(231, 231, 231);
     width: 100%;
