--- a/css/join.css
+++ b/css/join.css
@@ -1,5 +1,6 @@
+@charset "utf-8";
     .container{
-        width: 100vw;
+        width: 100% !important; 
         height: 100vh;
         background: #eff0f2;
         display: flex;
